<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="20dp">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:gravity="center"
        android:text="@string/wilaya"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/lght" />

            <RadioButton
                android:id="@+id/dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drk" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/lang"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/en" />

            <RadioButton
                android:id="@+id/ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ar" />
        </RadioGroup>
    </LinearLayout>

    <ListView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go"
        />

</LinearLayout>

